[metadata]
name = kubism
version = attr: setup.py:__version__
author = Yoann Lamouroux
author_email = yoann.lamouroux@exoscale.ch
description = Kubism
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD

[options]
python_requires= >=3.9
package_dir=
    =src
packages=find:
install_requires = file: requirements.txt

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    kubism = main:main